# path-clean

./: Cargo.toml
src/: lib.rs
